Show description on mtablet and mobile #37

--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -44,7 +44,7 @@
     line-height: 1.5rem;
     color: $white;
     
-    @media screen and (min-width: $breakpoint-small) {
+    @media screen and (min-width: $breakpoint-medium) {
       opacity: 0;
       transform: translateY(2rem);
       transition: .3s ease-in-out;
