--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -70,30 +70,47 @@
   &__image {
     grid-row: 1 / span 3;
     grid-column: 1 / span 2;
+  }
 
-    .image {
-      width: 14rem; 
-      height: 14rem;
-    
-      background-image: url('/assets/kaat.png');
-      background-size: cover;
-      background-repeat: no-repeat;
+  &__bg {
+    width: 14rem; 
+    height: 14rem;
+  
+    background-image: url('/assets/kaat.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 
-      @media screen and (min-width: $breakpoint-small) {
-        width: 20rem;
-        height: 20rem;
-      }
+    @media screen and (min-width: $breakpoint-small) {
+      width: 20rem;
+      height: 20rem;
     }
+  }
 
-    .tagline {
-      font-size: .8rem; 
-      font-weight: lighter;
-    }
+  &__tagline {
+    font-size: .8rem; 
+    font-weight: lighter;
   }
 
   @media screen and (min-width: $breakpoint-small) {
     width: 40rem;
     margin: 0 auto;
+  }
+}
+
+.tagline {
+  width: 100vw;
+  overflow: hidden;
+  background-color: $white;
+
+  span {
+    font-family: $font-bold;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: $primary-color;
+
+    padding: 2rem 5rem;
+    display: inline-block;
   }
 }
 
