--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -4,7 +4,7 @@
   background-color: $dark; 
 
   @media screen and (min-width: $breakpoint-small) {
-    padding-top: 10vh;
+    padding: 10vh 0;
   }
 }
 
