Optimize TagScroll on mobile #38

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -113,15 +113,20 @@
     span {
       display: inline;
   
-      padding: 5rem 2.5rem;
+      padding: 2.5rem;
 
       font-family: $font-bold;
-      font-size: 2.5rem;
+      font-size: 1.7rem;
       font-weight: bold;
       text-transform: uppercase;
       color: $primary-color;
 
       white-space: nowrap;
+
+      @media screen and (min-width: $breakpoint-small) {
+        padding: 5rem 2.5rem;
+        font-size: 2rem;
+      }
     }
   }
 }
